hphp/test/quick/impl_abstract_dv_3a.php.expectf
  HipHop Fatal error: Declaration of C::foo() must be compatible with that of A::foo() in %s on line 5
